welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: not found: value getCoulerSol
    if (getCoulerSol()==Color.green) vert= true
        ^SlugTracking:9: error: type mismatch;
 found   : Unit
 required: Boolean
    recule()
          ^