welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
    // Write your code here
  if (estFaceMur()) return false
  else {
    var vert=false
    avance()
    if (getCoulerSol()==Color.green) vert= true
    recule()
  }
}